<resources>
    <string name="app_name">Track-3-sqlite-2</string>

    <string name="action_settings">Settings</string>
    <string name="updateButtonText">Add to Database</string>
    <string name="showButtonText">Show all (in console)</string>

    <string name="firstName">Voornaam</string>
    <string name="lastName">Achternaam</string>
    <string name="age">Leeftijd</string>
    <string name="email">Email</string>
    <string name="imageUrl">Afbeelding URL</string>
</resources>
