<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/firstNameEditText"
        android:hint="@string/firstName"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/lastNameEditText"
        android:hint="@string/lastName"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/ageEditText"
        android:hint="@string/age"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/emailEditText"
        android:hint="@string/email"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/imageUrlEditText"
        android:hint="@string/imageUrl"
        android:text="null"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:text="@string/updateButtonText"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:text="@string/showButtonText"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp" />

</LinearLayout>